Extend multi-import support to schemas provided with the schemaLocation attributes (XERCESC-1659).

git-svn-id: https://svn.apache.org/repos/asf/xerces/c/trunk@882124 13f79535-47bb-0310-9956-ffa450edef68